--- a/.hlint.yaml
+++ b/.hlint.yaml
@@ -61,6 +61,7 @@
       - Text.Pandoc.Extensions
       - Text.Pandoc.Lua.Marshaling.Version
       - Text.Pandoc.Lua.Module.Pandoc
+      - Text.Pandoc.Lua.Module.Template
       - Text.Pandoc.Lua.Module.Utils
       - Text.Pandoc.Readers.Odt.ContentReader
       - Text.Pandoc.Readers.Odt.Namespaces
