--- a/pandoc.cabal
+++ b/pandoc.cabal
@@ -463,6 +463,7 @@ library
                  filepath              >= 1.1      && < 1.5,
                  haddock-library       >= 1.8      && < 1.10,
                  hslua                 >= 1.1      && < 1.4,
+                 hslua-module-doclayout >= 0.2     && < 0.3.0,
                  hslua-module-path     >= 0.1.0    && < 0.2.0,
                  hslua-module-system   >= 0.2      && < 0.3,
                  hslua-module-text     >= 0.2.1    && < 0.4,
@@ -681,6 +682,7 @@ library
                    Text.Pandoc.Lua.Module.MediaBag,
                    Text.Pandoc.Lua.Module.Pandoc,
                    Text.Pandoc.Lua.Module.System,
+                   Text.Pandoc.Lua.Module.Template,
                    Text.Pandoc.Lua.Module.Types,
                    Text.Pandoc.Lua.Module.Utils,
                    Text.Pandoc.Lua.Packages,
