--- a/stack.yaml
+++ b/stack.yaml
@@ -6,6 +6,7 @@ packages:
 - '.'
 extra-deps:
 - hslua-1.3.0
+- hslua-module-doclayout-0.2.0.1
 - hslua-module-path-0.1.0
 - jira-wiki-markup-1.3.3
 - commonmark-0.1.1.4
